--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,11 @@
 version: 2.1
 orbs:
   docker: circleci/docker@1.0.0
+  heroku: circleci/heroku@0.0.10.
 workflows:
   deploy:
     jobs:
       - docker/publish:
           image: aapokar/frontdeploy
           tag: 'latest'
+      - heroku/deploy-via-git
