--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "Example frontend project for docker course",
   "main": "index.js",
   "scripts": {
-    "start": "webpack --mode production && serve -s -l 3000 dist",
+    "start1": "webpack --mode production && serve -s -l 3000 dist",
+    "start": "node index.js",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --mode development --hot",
     "lint": "eslint . --fix",
